// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCard tests setup review card test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="add-margin"
            >
              <div
                class="ui medium header no-margin"
              >
                Adam
                 
                Canon
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="add-margin"
          >
            <div
              class="ui medium header no-margin"
            >
              Adam
               
              Canon
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="add-margin"
            >
              <div
                class="ui medium header no-margin"
              >
                Adam
                 
                Canon
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="add-margin"
          >
            <div
              class="ui medium header no-margin"
            >
              Adam
               
              Canon
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="add-margin"
            >
              <div
                class="ui medium header no-margin"
              >
                Adam
                 
                Canon
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="add-margin"
          >
            <div
              class="ui medium header no-margin"
            >
              Adam
               
              Canon
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 4`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="addMargin"
            >
              <div
                class="ui medium header no-margin"
              >
                COMS1004
                 
                intro to programming
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="addMargin"
          >
            <div
              class="ui medium header no-margin"
            >
              COMS1004
               
              intro to programming
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 5`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="addMargin"
            >
              <div
                class="ui medium header no-margin"
              >
                COMS1004
                 
                intro to programming
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="blue-downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="addMargin"
          >
            <div
              class="ui medium header no-margin"
            >
              COMS1004
               
              intro to programming
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="blue-downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 6`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui grid add-margin"
      >
        <div
          class="fourteen wide column review-card-left-column"
        >
          <div
            class="ui red message"
          >
            <i
              aria-hidden="true"
              class="red warning circle icon"
            />
            Please keep in mind that this review is more than 5 years old.
          </div>
          <div
            class="review-card-header-container"
          >
            <div
              class="addMargin"
            >
              <div
                class="ui medium header no-margin"
              >
                COMS1004
                 
                intro to programming
              </div>
            </div>
            <div
              class="add-margin"
            >
              <div
                class="ui small header no-margin"
              >
                2014-07-31
              </div>
            </div>
            <div
              class="review-id-container"
            >
              ID: 
              1
            </div>
          </div>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </p>
          <div
            class="ui small header"
          >
            Workload
          </div>
          <p>
            Excepteur sint occaecat cupidatat non proident.
          </p>
        </div>
        <div
          class="two wide column review-card-right-column"
        >
          <div
            class="ui centered stackable grid"
          >
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="upvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              10
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="downvote.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              2
            </div>
            <div
              class="row votes-container-icon-row"
            >
              <img
                class="ui mini image"
                src="funny.svg"
              />
            </div>
            <div
              class="row votes-container-number-row"
            >
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui grid add-margin"
    >
      <div
        class="fourteen wide column review-card-left-column"
      >
        <div
          class="ui red message"
        >
          <i
            aria-hidden="true"
            class="red warning circle icon"
          />
          Please keep in mind that this review is more than 5 years old.
        </div>
        <div
          class="review-card-header-container"
        >
          <div
            class="addMargin"
          >
            <div
              class="ui medium header no-margin"
            >
              COMS1004
               
              intro to programming
            </div>
          </div>
          <div
            class="add-margin"
          >
            <div
              class="ui small header no-margin"
            >
              2014-07-31
            </div>
          </div>
          <div
            class="review-id-container"
          >
            ID: 
            1
          </div>
        </div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <div
          class="ui small header"
        >
          Workload
        </div>
        <p>
          Excepteur sint occaecat cupidatat non proident.
        </p>
      </div>
      <div
        class="two wide column review-card-right-column"
      >
        <div
          class="ui centered stackable grid"
        >
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="upvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            10
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="downvote.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            2
          </div>
          <div
            class="row votes-container-icon-row"
          >
            <img
              class="ui mini image"
              src="funny.svg"
            />
          </div>
          <div
            class="row votes-container-number-row"
          >
            3
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
